longhorn/app/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    #traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: longhorn-ingress
  namespace: longhorn
spec:
  tls:
    - hosts:
        - longhorn.local.traunseenet.com
      secretName: letsencrypt-prod
  ingressClassName: traefik
  rules:
    - host: longhorn.local.traunseenet.com
      http:
        paths:
          - backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
